2008-05-31  Jonh Wendell <jwendell@gnome.org>

	Fix bug #515816 - connect dialog should remember Host/Port address.
	Also added options to connect in fullscreen, view only and with scaling
	directly in the connection dialog.

2008-05-31  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-app.c: Persist changes in menu shortcuts (Ubuntu #233918).

2008-05-30  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-window.c: Drop F11 key handling.

2008-05-29  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c: Fix bug #531969 - scrolling on server.

2008-05-29  Jonh Wendell <jwendell@gnome.org>

	Added a gconf key to disable menu shortcuts.

2008-05-29  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-window.c,
	* src/vinagre-tab.[ch]: Get rid of grabbing cursor. Keyboard is grabbed
	automatically.

2008-05-29  Jonh Wendell <jwendell@gnome.org>

	Fixed bug #522100 - Provide option to leave fullscreen mode

2008-05-12  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.3

==================== 2.23.2 =====================

2008-05-09  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Closes #519145 – Implement unique instance.

2008-05-07  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c: Closes #531954 – Don't propagate key events.

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Closes #518351 – Don't show tabs when only one connection is open.

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Make VinagrePrefs a GObject

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-connection.c: Support for host::port, patch from
	Henrik Holst, closes #501165.

2008-05-06  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: requires gtk-vnc 0.3.6

2008-05-05  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c: Handle correctly clipboard. Closes #530582.

2008-05-05  Jonh Wendell <jwendell@gnome.org>
