@@ -1,3 +1,7 @@
+2008-06-01  Jonh Wendell <jwendell@gnome.org>
+
+	Reworked 'edit bookmark' window, among other things...
+
 2008-05-31  Jonh Wendell <jwendell@gnome.org>
 
 	Fix bug #515816 - connect dialog should remember Host/Port address.
